--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>nanoTech</title>
+	<title>nanoBike</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="language" content="en">
 
