--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>nanoBike</title>
+	<title>nanoBikes</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="language" content="en">
 
@@ -36,8 +36,7 @@
 		<span id="navbar-toggle">
           <i class="fa fa-bars"></i>
       </span>
-    <a href="#" id="logo">nanoTech
-    </a>
+    <a href="#" id="logo">nanoBikes</a>
     <ul id="main-nav">
       <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="#workHeader" class="nav-links">Products</a></li>
@@ -52,7 +51,7 @@
   <header id="hero">
     <div id="nameOverlay">
       <div class="name">
-        <h1>nanoTech</h1>
+        <h1>nanoBikes</h1>
       </div>
     </div>
   </header>
