--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="#workHeader" class="nav-links">Products</a></li>
       
-      <li><a href="nanoBike.html" class="nav-links">nanoStreet 2</a></li>
-      <li><a href="nanoHybrid" class="nav-links">nanoHybrid</a></li>
-      <li><a href="nanoTrail.html" class="nav-links">nanoTrail</a></li>
-      <li><a href="nanoKids.html" class="nav-links">nanoKids</a></li>
+      <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
+      <li><a href="nanohybrid" class="nav-links">nanoHybrid</a></li>
+      <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
+      <li><a href="nanokids.html" class="nav-links">nanoKids</a></li>
       
     </ul>
   </nav>
@@ -60,10 +60,10 @@
       <div class="content">
         <h1 class="sectionTitle" style="color: #2A85BC; width: 100%; margin-bottom: 5vh">About</h1>
         <div id="aboutImg">
-          <img src="favicon.png" alt="" id="headshot">
+          <img src="https://cdn.discordapp.com/attachments/683838651666399311/783451558447939594/90594344496990a12019236d108589f7.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-Founded in 2015, nanoBike has become one of the world's leading eletric bike producer. In 2018, we aquired Boosted Bike.co and incorperated their designs into ours to create what is now the worlds best built bike tech. With innovations like our nano frequencies, Millimeter Space sensing, built in GPS, nanoBike has won many awards and most recently, was named best eletric bike of 2019.           </p>
+          Founded in 2015, nanoBike has become one of the world's leading eletric bike producer. In 2018, we aquired Boosted Bike.co and incorperated their designs into ours to create what is now the worlds best built bike tech. With innovations like our nano frequencies, Millimeter Space sensing, built in GPS, nanoBike has won many awards and most recently, was named best eletric bike of 2019.           </p>
         </div>
 <h1 class="sectionTitle" style="color: #2A85BC; width: 100%; margin-bottom: 5vh">Locations</h1>        
 <div class="aboutGrid">
