--- a/nanobike.html
+++ b/nanobike.html
@@ -36,21 +36,20 @@
 		<span id="navbar-toggle">
           <i class="fa fa-bars"></i>
       </span>
-    <a href="index.html" id="logo">nanoTech
-    </a>
+    <a href="index.html" id="logo">nanoBikes</a>
     <ul id="main-nav">
-      <li><a href="index.html#about" class="nav-links">About</a></li>
+     <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="index.html#workheader" class="nav-links">Products</a></li>
-      <li><a href="vrnano.html" class="nav-links">vrNano</a></li>
-      <li><a href="arnano.html" class="nav-links">arNano</a></li>
-      <li><a href="vrgame.html" class="nav-links">vrGame</a></li>
-      <li><a href="vrlite.html" class="nav-links">vrLite</a></li>
+      <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
+      <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
+      <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
+      <li><a href="nanokids.html" class="nav-links">nanoKids</a></li>
     </ul> 
   </nav>
   <header id="hero">
     <div id="nameOverlay">
       <div class="name">
-        <h1>VRnano Headset</h1>
+        <h1>nanoStreet 2</h1>
       </div>
     </div>'/'
   </header>
