--- a/nanokids.html
+++ b/nanokids.html
@@ -36,21 +36,20 @@
 		<span id="navbar-toggle">
           <i class="fa fa-bars"></i>
       </span>
-    <a href="index.html" id="logo">nanoTech
-    </a>
+    <a href="index.html" id="logo">nanoBikes</a>
      <ul id="main-nav">
      <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="index.html#workheader" class="nav-links">Products</a></li>
-      <li><a href="vrnano.html" class="nav-links">vrNano</a></li>
-      <li><a href="arnano.html" class="nav-links">arNano</a></li>
-      <li><a href="vrgame.html" class="nav-links">vrGame</a></li>
-      <li><a href="vrlite.html" class="nav-links">vrLite</a></li>
+      <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
+      <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
+      <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
+      <li><a href="nanokids.html" class="nav-links">nanoKids</a></li>
     </ul> 
   </nav>
   <header id="hero">
     <div id="nameOverlay">
       <div class="name">
-        <h1>VRnano Lite</h1>
+        <h1>nanoKids</h1>
       </div>
     </div>'/'
   </header>
@@ -62,7 +61,7 @@
           <img src="img/nanoKids.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-          <p> Enjoy most of the features of the vrNano for half the price! This new headset is the smallest ever. It has a lower profile than most safety goggles. It has a comfortable fit on your head which is adjustable depending on your head's size. The vrNano Lite uses hand gestures to control your virtual movement. You can also use the controller for traditional VR controls. We have partnered with Steam to bring you the latest of their VR operating system. Play all of your favorite virtual reality games, and watch all of the streaming services that you know and love! All of this for the low price of $300. 
+          <p> What about kids? Don't they deserve the same high tech bike as a you do? Well don't worry because we've got you covered! We have the same high tech bikes you love for the cheap price of $200. 
           </p>
         </div>
         <div class="aboutGrid">
