--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <img src="favicon.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-          Founded in 2015, nanoBike has become one of the world's leading eletric bike producer. In 2018, we aquired Boosted Bike.co and incorperated their designs into ours to create what is now the worlds best built bike tech. With innovations like our nano frequencies, Millimeter Space sensing, built in GPS, nanoBike has won many awards and most recently, was named best eletric bike of 2019.           </p>
+          Founded in 2015, nanoBike has become one of the world's leading eletric bike producer. In 2018, we aquired Boosted Bike.co and incorperated their designs into ours to create what is now the worlds best built bike tech. With innovations like our nano frequencies, Millimeter Space sensing, built in GPS, nanoBike has won many awards and most recently, was named Best Eletric Bike Company of 2019.           </p>
         </div>
 <h1 class="sectionTitle" style="color: #2A85BC; width: 100%;">Locations</h1>        
 <div class="aboutGrid">
@@ -111,7 +111,7 @@
           <div class="projectDetails">
             <a   href="nanohybrid.html" class="projectTitle">nanoHybrid</a>
             <p class="projectDescription"> <!-- quinten -->
-            <h4>Try the latest in Augmented Reality technonlogy with the ARnano experencince!</h4> Place objects in rooms, play chess in mid air, and have a concert in the comfort of your own home!
+            <h4>Want to experience the power of electric bikes, but don't want to leave behind the fun of a pedal bike?</h4> The nanoHybrid is for you! You can recharge your bike with manual mode, and power over hills with hybrid mode.
           </div>
         </div>
         
@@ -133,7 +133,7 @@
             <a href="nanotrail.html" class="projectTitle">nanoTrail</a>
             <p class="projectDescription">
             
-              <h4>Want the freedom of VR, without the expenses and complications of a professional headset?</h4> Introducting the VRnano Lite, a headset that even your grandma could use! Just insert batteries, take the controller, and slip the headset on your head! It's easy as one, two, three! And, it's got all the tech that the high end headsets have, and the added comfort of being extremely user friendly!            
+              <h4>Experience the great outdoors with nanoTrail!</h4> With ultra-durable, ultra-comfortable wheels, and with advanced nanoSuspension technology, the nanoTrail is equipped to handle all outdoor excursions, with the joy of riding on a real bike! It's perfect for outdoor camping to trail blazing, and everything in-between!            
           </div>
         </div>
       </div>
