--- a/nanobike.html
+++ b/nanobike.html
@@ -39,7 +39,7 @@
     <a href="index.html" id="logo">nanoBikes</a>
     <ul id="main-nav">
      <li><a href="index.html#about" class="nav-links">About</a></li>
-      <li><a href="index.html#workheader" class="nav-links">Products</a></li>
+      <li><a href="index.html#workHeader" class="nav-links">Products</a></li>
       <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
       <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
       <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
