--- a/nanohybrid.html
+++ b/nanohybrid.html
@@ -58,7 +58,7 @@
       <div class="content">
         <h1 class="sectionTitle" style="color: #2A85BC; width: 100%; margin-bottom: 5vh">     </h1>
         <div id="aboutImg">
-          <img src="img/arNano.jpg" alt="" id="headshot">
+          <img src="img/very_tiny_hybrid_bike.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
           <p> ARnano is the lastest nanoTech innovation. ARnano displays reality like if you would see it with your own eyes, except it gives you the ability to add anything to what you to see, even if it's not really there! If you want to have a baby emu sitting on your desk? You can do that in ARnano! ARnano has the storage to be able to have all your activity automatically saved from the past 4 years if you enable the auto-save. You can also play holo-chess and checkers, lazer tag in your own home, hide and seek, and more with arNano.   
