--- a/nanotrail.html
+++ b/nanotrail.html
@@ -43,7 +43,7 @@
       <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
       <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
       <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
-      <li><a href="nanokids.html" class="nav-links">nanoKids</a></li>
+      <li><a href="nanokids.html" class="nav-links">nanoBike Kids</a></li>
     </ul> 
   </nav>
   <header id="hero">
@@ -58,10 +58,10 @@
       <div class="content">
         <h1 class="sectionTitle" style="color: #2A85BC; width: 100%; margin-bottom: 5vh">    </h1>
         <div id="aboutImg">
-          <img src="nanoRealTrail.png" alt="" id="headshot">
+          <img src="nanotrail68.99.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-          <p> Are you into powerbikes? Do you like to bike on mountains? Well we've got something!<h4>Introducing our new, amazing, and powerful nanoTrail!</h4> With more horsepower than any other bike, you'll be able to comfortably climb mountains and explore trails without any risk of getting stuck. Also, this bike has features like a seat tempurature adjuster if you are feeling cold. 
+          <p> Are you into powerbikes? Do you like to bike on mountains? Well we've got something!<h4>Introducing our new, amazing, and powerful nanoTrail!</h4> With more horsepower than any other bike, you'll be able to comfortably climb mountains and explore trails without any risk of getting stuck. Also, this bike has features like a seat tempurature adjuster if you are feeling cold. Unlike almost all other mountain bikes, we use our latest version of Aluminium Alloy, the nanoTrail is both durable, and light. We sacrificed no components at all to achive the bike's low weight.
           </p>
           <!--Integrated with the 5 senses, you'll feel like your're actually in your're game! This game can be played by up to 4 people, so you can play as a family, or take your friends. Your homeworld of Kamino is being taken over by the droid army and you and your 3 other squadmates, must locate and protect the DNA chamber room until more backup arrives. Reach it before the droids can so that they won't be able to unlock new possibilities to win the war. -->
         </div>
@@ -93,8 +93,7 @@
   
     
     <div class="content" id="contact">
-
-      <a href="index.html" class="sectionTitle">Back to home<a>
+      <a href="index.html" class="sectionTitle" style="text-align: center; text-decoration: none">Back to home</a>
     
   </footer>
      <script src="js/scroll.js"></script>
