--- a/nanohybrid.html
+++ b/nanohybrid.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>nanoBikes</title>
+	<title>nanoHybrid</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="language" content="en">
 
@@ -40,10 +40,6 @@
   <ul id="main-nav">
      <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="index.html#workHeader" class="nav-links">Products</a></li>
-      <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
-      <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
-      <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
-      <li><a href="nanokids.html" class="nav-links">nanoBike Kids</a></li>
     </ul> 
   </nav>
   <header id="hero">
@@ -61,7 +57,7 @@
           <img src="img/very_tiny_hybrid_bike.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-          <p>Are you unsure about getting into electric bikes? Are you worried that you won't be getting any exercise with one? Don't worry, we've got you covered. <h4> Introducing the ultimate hybrid bike, the best of both worlds, the nanoHybrid!</h4> nanoHybrid comes with all the features of a regular bike, in addition to the advantages of an eletric bike. The battery is able to be charged with manual pedalling, and you can seamlessly switch to the comfortable elctric motor with a flick of a switch. Don't really want to be locked to the roads? nanoHybrid also comes equipped for the offroad, with light but heavy-duty wheels and a GPS.
+          <p>Are you unsure about getting into electric bikes? Are you worried that you won't be getting any exercise with one? Don't worry, we've got you covered. <h4> Introducing the ultimate hybrid bike, the best of both worlds, the nanoHybrid!</h4> nanoHybrid comes with all the features of a regular bike, in addition to the advantages of an electric bike. The battery is able to be charged with manual pedalling, and you can seamlessly switch to the comfortable electric motor with a flick of a switch. Don't really want to be locked to the roads? nanoHybrid also comes equipped for the offroad, with light but heavy-duty wheels and a GPS.
           </p>
         </div>
         <div class="aboutGrid">
@@ -92,7 +88,7 @@
   
     
     <div class="content" id="contact">
-      <a href="index.html" class="sectionTitle" style="text-align: center; text-decoration: none">Back to home</a>
+      <a href="products2.html" class="sectionTitle" style="text-align: center; text-decoration: none">Back to products</a>
     
   </footer>
      <script src="js/scroll.js"></script>
