--- a/nanokids.html
+++ b/nanokids.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>VR+AR: Wave of the Future</title>
+	<title>nanoBike Kids</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="language" content="en">
 
@@ -40,10 +40,6 @@
      <ul id="main-nav">
      <li><a href="index.html#about" class="nav-links">About</a></li>
       <li><a href="index.html#workHeader" class="nav-links">Products</a></li>
-      <li><a href="nanobike.html" class="nav-links">nanoStreet 2</a></li>
-      <li><a href="nanohybrid.html" class="nav-links">nanoHybrid</a></li>
-      <li><a href="nanotrail.html" class="nav-links">nanoTrail</a></li>
-      <li><a href="nanokids.html" class="nav-links">nanoBike Kids</a></li>
     </ul> 
   </nav>
   <header id="hero">
@@ -61,7 +57,7 @@
           <img src="img/nanoKids.png" alt="" id="headshot">
         </div>
         <div id="aboutText">
-          <p> What about kids? Don't they deserve the same high tech bike as a you do? Well don't worry because we've got you covered!<h4>Introducing the nanoBike Kids!</h4> We have the same high tech bikes you love for the cheap price of $200, and added special feautures that tailor the young kids. The nanoBike Kids bike includes a tracker if they loose contact with you, and extra-safe trailing wheels and deployable airbags. The tracker can pair with your mobile device, or even your own nanoBike.  
+          <p> What about kids? Don't they deserve the same high tech bike as you do? Don't worry because we've got them covered!<h4>Introducing the nanoBike Kids!</h4> We have the same high tech bikes you love for the cheap price of $200, with added special features that tailor the young kids. The nanoBike Kids bike includes a tracker if they lose contact with you, and extra-safe trailing wheels and deployable airbags. The tracker can pair with your mobile device, or even your own nanoBike. 
           </p>
         </div>
         <div class="aboutGrid">
@@ -92,7 +88,7 @@
   
     
     <div class="content" id="contact">
-      <a href="index.html" class="sectionTitle" style="text-align: center; text-decoration: none">Back to home</a>
+      <a href="products2.html" class="sectionTitle" style="text-align: center; text-decoration: none">Back to products</a>
     
   </footer>
      <script src="js/scroll.js"></script>
